--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -151,7 +151,7 @@
      select:
        prompt: Veuillez sélectionner
      submit:
-       create: Créer un(e) %{model}
+       create: CREER L'EVENEMENT
        submit: Enregistrer ce(tte) %{model}
        update: Modifier ce(tte) %{model}
    number:
